# triplane

./: .travis.yml  CMakeLists.txt  README.md
data/: fokker.lst
data/menus/: netmenu.pgd
data_src/: pcx.lst
data_src/pcx/menus/: netmenu.pcx
doc/: TODO  triplane.6
pkg/: build-deb.sh  triplane.desktop
src/: settings.cpp  settings.h  triplane.cpp  triplane.h
src/gfx/: bitmap.cpp  bitmap.h  fades.cpp  fades.h  font.cpp  font.h  gfx.cpp
src/io/: dksfile.cpp  joystick.cpp  mouse.cpp  netclient.cpp  netclient.h  network.cpp  network.h  network_win.cpp  network_win.h  sdl_compat.cpp  sdl_compat.h  timing.cpp  video.cpp  video.h
src/menus/: menusupport.cpp  menusupport.h  tripmenu.cpp  tripmenu.h
src/tools/dksbuild/: dksbuild.cc
src/tools/lvledit/: lvledit.cpp
src/tools/pcx2pgd/: pcx2pgd.cpp
src/tools/pgdview/: pgdview.cpp
src/util/: msvc.h  random.cpp  wutil.cpp
src/web/: shell.html
src/world/: plane.cpp  plane.h  tripaudio.cpp  tripaudio.h
